Add encoding of CBOR
Add a new library cbor_encode.
Add tests.

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(cbor_common PRIVATE zephyr_interface)
 add_library(cbor_decode cbor_decode.c)
 target_include_directories(cbor_decode PUBLIC ${CDDL_GEN_BASE}/include)
 target_link_libraries(cbor_decode PRIVATE zephyr_interface PUBLIC cbor_common)
+
+add_library(cbor_encode cbor_encode.c)
+target_include_directories(cbor_encode PUBLIC ${CDDL_GEN_BASE}/include)
+target_link_libraries(cbor_encode PRIVATE zephyr_interface PUBLIC cbor_common)
