--- a/tests/cbor_decode/test3_simple/CMakeLists.txt
+++ b/tests/cbor_decode/test3_simple/CMakeLists.txt
@@ -14,8 +14,10 @@ target_sources(app PRIVATE
   ${app_sources})
 
 target_cddl_source(app pet.cddl ENTRY_TYPES Pet
+  DECODE
   #VERBOSE
   )
 target_cddl_source(app serial_recovery.cddl ENTRY_TYPES Upload
+  DECODE
   #VERBOSE
   )
