--- a/tests/cbor_encode/test2_simple/CMakeLists.txt
+++ b/tests/cbor_encode/test2_simple/CMakeLists.txt
@@ -7,20 +7,15 @@
 cmake_minimum_required(VERSION 3.8.2)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 add_subdirectory(../../.. ${PROJECT_BINARY_DIR}/cddl_gen)
-
 project(NONE)
-
-target_cddl_source(app manifest-moran3.cddl
-  ENTRY_TYPES OuterWrapper
-  DECODE
-  #VERBOSE
-  )
-target_cddl_source(app manifest-moran4.cddl
-  ENTRY_TYPES SUIT_Outer_Wrapper
-  DECODE
-  #VERBOSE
-  )
 
 FILE(GLOB app_sources src/*.c)
 target_sources(app PRIVATE
   ${app_sources})
+
+target_cddl_source(app pet.cddl ENTRY_TYPES Pet ENCODE
+  #VERBOSE
+  )
+#target_cddl_source(app serial_recovery.cddl ENTRY_TYPES Upload ENCODE
+  #VERBOSE
+ # )
