Generalize to get ready for encoding.
This involves quite a bit of refactoring, and adding of new functions
in cbor_decode, as well as extracting some functions into a cbor_common
library.

This adds backups as part of the state variable.

This also adds checking for whether the whole input has been decoded.

This also fixes a number of large and small issues in cddl_gen.py:
 - Better respect CDDL's operator precedence
 - Better handling of skipping levels in the type hierarchy.
 - General code cleanup.

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+add_library(cbor_common cbor_common.c)
+target_include_directories(cbor_common PUBLIC ${CDDL_GEN_BASE}/include)
+target_link_libraries(cbor_common PRIVATE zephyr_interface)
+
 add_library(cbor_decode cbor_decode.c)
 target_include_directories(cbor_decode PUBLIC ${CDDL_GEN_BASE}/include)
-target_link_libraries(cbor_decode PRIVATE zephyr_interface)
+target_link_libraries(cbor_decode PRIVATE zephyr_interface PUBLIC cbor_common)
