--- a/tests/cbor_decode/test1_suit_old_formats/CMakeLists.txt
+++ b/tests/cbor_decode/test1_suit_old_formats/CMakeLists.txt
@@ -10,8 +10,14 @@ add_subdirectory(../../.. ${PROJECT_BINARY_DIR}/cddl_gen)
 
 project(NONE)
 
-target_cddl_source(app manifest-moran3.cddl ENTRY_TYPES OuterWrapper)
-target_cddl_source(app manifest-moran4.cddl ENTRY_TYPES SUIT_Outer_Wrapper)
+target_cddl_source(app manifest-moran3.cddl
+  ENTRY_TYPES OuterWrapper
+  #VERBOSE
+  )
+target_cddl_source(app manifest-moran4.cddl
+  ENTRY_TYPES SUIT_Outer_Wrapper
+  #VERBOSE
+  )
 
 FILE(GLOB app_sources src/*.c)
 target_sources(app PRIVATE
